# SoulOfTheWorld

./: .gitignore  CMakeLists.txt  Exe.sh  Makefile  README.md
assets/: GameSettings.json  UserSettings.json
include/: Character.hpp  Drops.hpp  Game.hpp  GameCamera.hpp  HUD.hpp  Hotbar.hpp  Inventory.hpp  Item.hpp  Menu.hpp  Player.hpp  Projectile.hpp  Screen.hpp  Select.hpp  Spell.hpp  UI.hpp
include/core/: Cam.hpp  Player.hpp  Settings.hpp
include/resources/: Element.hpp
include/roots/: Entity.hpp  Screen.hpp  Spell.hpp
include/screens/: Game.hpp  Menu.hpp  Options.hpp  Select.hpp
include/spells/: WaterBullet.hpp
include/ui/: HUD.hpp  Hotbar.hpp  Window.hpp
include/world/: Chunk.hpp  Tile.hpp  Zone.hpp
src/: Cam.cpp  Game.cpp  GameCamera.cpp  HUD.cpp  Hotbar.cpp  Inventory.cpp  Menu.cpp  Player.cpp  Screen.cpp  Select.cpp  Spell.cpp  UI.cpp  main  main.cpp
src/core/: Cam.cpp  Player.cpp  Settings.cpp
src/roots/: Entity.cpp  Screen.cpp  Spell.cpp
src/screens/: Game.cpp  Menu.cpp  Options.cpp  Select.cpp
src/spells/: WaterBullet.cpp
src/ui/: HUD.cpp  Hotbar.cpp  Inventory.cpp  Window.cpp
src/world/: Tile.cpp
